--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -111,7 +111,7 @@
                                 <hr>
 
                                 <div class="row">
-                                    <div class="col-md-3">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Страна',
                                             'type': 'text',
@@ -121,7 +121,7 @@
                                             }
                                         } %}
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Производитель',
                                             'type': 'text',
@@ -132,7 +132,7 @@
                                         } %}
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Артикул',
                                             'type': 'text',
@@ -143,7 +143,7 @@
                                             }
                                         } %}
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Штрих код',
                                             'type': 'number',
@@ -159,7 +159,7 @@
                                 <hr>
 
                                 <div class="row">
-                                    <div class="col-md-3">
+                                    <div class="col-4 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Цена закупки',
                                             'type': 'number',
@@ -172,7 +172,7 @@
                                             }
                                         } %}
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-4 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Цена продажи',
                                             'type': 'number',
@@ -186,7 +186,7 @@
                                         } %}
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-4 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Цена оптовая',
                                             'type': 'number',
@@ -199,17 +199,28 @@
                                             }
                                         } %}
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Налог',
                                             'type': 'number',
                                             'name': 'tax',
                                             'postfix': '%',
                                             'args': {
-                                                'value': item.tax|number_format(2, '.', ''),
-                                                'placeholder': '18.0',
+                                                'value': item.tax ? item.tax|number_format(2, '.', '') : '',
+                                                'placeholder': '20.00',
                                                 'step': 'any',
                                                 'min': '0',
+                                            }
+                                        } %}
+                                    </div>
+                                    <div class="col-6 col-md-3 offset-md-9">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Акция',
+                                            'type': 'select',
+                                            'name': 'special',
+                                            'args': {
+                                                'option': _(['no', 'yes']),
+                                                'selected': item.special ? 'yes' : 'no'
                                             }
                                         } %}
                                     </div>
@@ -218,34 +229,56 @@
                                 <hr>
 
                                 <div class="row">
-                                    <div class="col-md-3">
+                                    <div class="col-4 col-md-3">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'На складе',
+                                            'label': 'Ширина (см)',
                                             'type': 'number',
-                                            'name': 'stock',
+                                            'name': 'dimension[width]',
                                             'args': {
-                                                'value': item.stock,
-                                                'placeholder': '1',
-                                                'step': 'any',
-                                                'min': '0',
+                                                'value': item.dimension.width ? item.dimension.width|number_format(2, '.', '') : '',
+                                                'placeholder': '0.00'
                                             }
                                         } %}
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-4 col-md-3">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Высота (см)',
+                                            'type': 'number',
+                                            'name': 'dimension[height]',
+                                            'args': {
+                                                'value': item.dimension.height ? item.dimension.height|number_format(2, '.', '') : '',
+                                                'placeholder': '0.00'
+                                            }
+                                        } %}
+                                    </div>
+                                    <div class="col-4 col-md-3">
+                                        {% include 'cup/form.twig' with {
+                                            'label': 'Длинна (см)',
+                                            'type': 'number',
+                                            'name': 'dimension[length]',
+                                            'args': {
+                                                'value': item.dimension.length ? item.dimension.length|number_format(2, '.', '') : '',
+                                                'placeholder': '0.00'
+                                            }
+                                        } %}
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Объем',
                                             'type': 'number',
                                             'name': 'volume',
                                             'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="Зависит от выбранной размерности"></i>',
                                             'args': {
-                                                'value': item.volume,
-                                                'placeholder': '1',
+                                                'value': item.volume ? item.volume|number_format(3, '.', '') : '',
+                                                'placeholder': '1.000',
                                                 'step': 'any',
                                                 'min': '0',
                                             }
                                         } %}
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-6 col-md-3">
                                         {% include 'cup/form.twig' with {
                                             'label': 'Размерность',
                                             'type': 'text',
@@ -262,14 +295,16 @@
                                             {% endfor %}
                                         </datalist>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-md-3 offset-md-3">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Акция',
-                                            'type': 'select',
-                                            'name': 'special',
+                                            'label': 'На складе',
+                                            'type': 'number',
+                                            'name': 'stock',
                                             'args': {
-                                                'option': _(['no', 'yes']),
-                                                'selected': item.special ? 'yes' : 'no'
+                                                'value': item.stock ? item.stock|number_format(2, '.', '') : '',
+                                                'placeholder': '1.00',
+                                                'step': 'any',
+                                                'min': '0',
                                             }
                                         } %}
                                     </div>
