--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -4,8 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Формы</h2>
-                <h5 class="text-white op-7 mb-2">Функционал форм позволяет принимать данные с сайта или форм встроенных в удаленные сайты.</h5>
+                <h2 class="text-white pb-2 fw-bold">Список форм ({{ list.count() }})</h2>
             </div>
         </div>
     </div>
@@ -17,7 +16,6 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
-                        <h4 class="card-title">Список форм ({{ list.count() }})</h4>
                         <a href="/cup/form/add" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
                             Создать форму
