--- a/src/Template/cup/form/view/detail.twig
+++ b/src/Template/cup/form/view/detail.twig
@@ -4,8 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Формы</h2>
-                <h5 class="text-white op-7 mb-2">Функционал форм позволяет принимать данные с сайта или форм встроенных в удаленные сайты.</h5>
+                <h2 class="text-white pb-2 fw-bold">Полученные данные</h2>
             </div>
         </div>
     </div>
@@ -20,7 +19,6 @@
                         <a href="/cup/form/{{ item.form_uuid }}/view" class="btn btn-secondary btn-icon mr-1">
                             <i class="fas fa-long-arrow-alt-left"></i>
                         </a>
-                        <h4 class="card-title">Полученные данные ({{ item.uuid }})</h4>
                     </div>
                 </div>
                 <div class="card-body">
