--- a/src/Template/cup/catalog/category/form.twig
+++ b/src/Template/cup/catalog/category/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Каталог</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ category.uuid ? 'Редактирование категории ' ~ category.title : 'Создание новой категории' }}</h2>
             </div>
         </div>
     </div>
@@ -20,7 +20,6 @@
                             <a href="/cup/catalog/category{{ category.parent ? '/' ~ category.parent : (parent ? '/' ~ parent : '') }}" class="btn btn-secondary btn-icon mr-1">
                                 <i class="fas fa-long-arrow-alt-left"></i>
                             </a>
-                            <div class="card-title">{{ category.uuid ? 'Редактирование категории ' ~ category.title : 'Создание новой категории' }}</div>
 
                             <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
                                 <li class="nav-item">
