--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Заказы</h2>
+                <h2 class="text-white pb-2 fw-bold">Список заказов ({{ orders.count() }})</h2>
             </div>
         </div>
     </div>
@@ -16,8 +16,6 @@
             <div class="card">
                 <div class="card-header">
                     <div class="card-head-row">
-                        <h4 class="card-title">Список заказов ({{ orders.count() }})</h4>
-
                         <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="pill" href="#invoice" role="tab">
