--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Гостевая книга</h2>
+                <h2 class="text-white pb-2 fw-bold">Редактирование записи</h2>
             </div>
         </div>
     </div>
@@ -15,11 +15,6 @@
         <div class="col-md-12">
             <div class="card">
                 <form method="post">
-                    <div class="card-header">
-                        <div class="card-head-row">
-                            <div class="card-title">Редактирование записи</div>
-                        </div>
-                    </div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-6">
