remove name of entity from edit form

--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ order.uuid ? 'Редактирование заказа ' ~ order.serial : 'Создание нового заказа' }}</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ order.uuid ? 'Редактирование заказа' : 'Создание нового заказа' }}</h2>
             </div>
             <div class="ml-md-auto py-2 py-md-0">
                 <a href="/cup/catalog/order/{{ order.uuid }}/invoice" class="btn btn-secondary">
