--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Номенклатура {{ category ? 'в категории ' ~ category.title : '' }} ({{ products.count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">Номенклатура {{ category ? 'в категории' : '' }} ({{ products.count() }})</h2>
             </div>
         </div>
     </div>
