--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ item.uuid ? 'Редактирование формы ' ~ item.title : 'Создание новой формы' }}</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ item.uuid ? 'Редактирование формы' : 'Создание новой формы' }}</h2>
             </div>
         </div>
     </div>
