--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ item.uuid ? 'Редактирование категории ' ~ item.title : 'Добавление новой категории' }}</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ item.uuid ? 'Редактирование категории' : 'Добавление новой категории' }}</h2>
             </div>
         </div>
     </div>
