--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ item ? 'Редактирование пользователя ' ~ item.getName('full') : 'Добавление пользователя' }}</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ item ? 'Редактирование пользователя' : 'Добавление пользователя' }}</h2>
             </div>
             {% if item %}
                 <div class="ml-md-auto py-2 py-md-0">
