fix group description title

--- a/src/Template/cup/user/group/form.twig
+++ b/src/Template/cup/user/group/form.twig
@@ -37,7 +37,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 {% include 'cup/editor.twig' with {
-                                    'label': 'Текст страницы',
+                                    'label': 'Описание группы',
                                     'name': 'description',
                                     'args': {
                                         'value': item.description
