--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -162,13 +162,6 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="card full-height">
-                                                <div class="card-header">
-                                                    <div class="d-flex align-items-center">
-                                                        <h4 class="card-title">{{ 'Быстрый переход'|locale }}</h4>
-
-                                                        <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto"></ul>
-                                                    </div>
-                                                </div>
                                                 <div class="card-body">
                                                     <div class="row">
                                                         <div class="col-12 col-sm-6 col-lg-4">
@@ -296,7 +289,7 @@
                                         <div class="col-md-12">
                                             <div class="card full-height">
                                                 <div class="card-header">
-                                                    <ul class="nav nav-pills nav-secondary nav-pills-no-bd" role="tablist">
+                                                    <ul class="nav nav-pills nav-secondary nav-pills-no-bd justify-content-center" role="tablist">
                                                         <li class="nav-item">
                                                             <a class="nav-link active show" data-toggle="pill" href="#stats" role="tab">
                                                                 {{ 'Сводка сайта'|locale }}
