--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -176,6 +176,13 @@
                 <p>{{ 'Редактор шаблона'|locale }}</p>
             </a>
         </li>
+
+        <li class="nav-item">
+            <a href="/cup/logs">
+                <i class="fas fa-terminal"></i>
+                <p>{{ 'Журнал системы'|locale }}</p>
+            </a>
+        </li>
     {% else %}
         <li class="nav-item">
             <a href="/user/logout">
