--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -22,22 +22,22 @@
                                     {{ 'Общие'|locale }}
                                 </a>
                             </li>
-                            <li>
+                            <li class="nav-item">
                                 <a class="nav-link" data-toggle="pill" href="#user" role="tab">
                                     {{ 'Пользователи'|locale }}
                                 </a>
                             </li>
-                            <li class="nav-item submenu">
+                            <li class="nav-item">
                                 <a class="nav-link" data-toggle="pill" href="#catalog" role="tab">
                                     {{ 'Каталог'|locale }}
                                 </a>
                             </li>
-                            <li class="nav-item submenu">
+                            <li class="nav-item">
                                 <a class="nav-link" data-toggle="pill" href="#plugins" role="tab">
                                     {{ 'Плагины'|locale }}
                                 </a>
                             </li>
-                            <li class="nav-item submenu">
+                            <li class="nav-item">
                                 <a class="nav-link" data-toggle="pill" href="#variables" role="tab">
                                     {{ 'Переменные'|locale }}
                                 </a>
