--- a/src/Template/cup/form/form.twig
+++ b/src/Template/cup/form/form.twig
@@ -16,7 +16,7 @@
             <div class="card">
                 <form method="post">
                     <div class="card-header">
-                        <div class="card-head-row">
+                        <div class="d-flex align-items-center">
                             <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active show" data-toggle="pill" href="#form" role="tab">
