--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -289,18 +289,20 @@
                                         <div class="col-md-12">
                                             <div class="card full-height">
                                                 <div class="card-header">
-                                                    <ul class="nav nav-pills nav-secondary nav-pills-no-bd justify-content-center" role="tablist">
-                                                        <li class="nav-item">
-                                                            <a class="nav-link active show" data-toggle="pill" href="#stats" role="tab">
-                                                                {{ 'Сводка сайта'|locale }}
-                                                            </a>
-                                                        </li>
-                                                        <li class="nav-item">
-                                                            <a class="nav-link" data-toggle="pill" href="#notepad" role="tab">
-                                                                {{ 'Блокнот'|locale }}
-                                                            </a>
-                                                        </li>
-                                                    </ul>
+                                                    <div class="d-flex align-items-center">
+                                                        <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
+                                                            <li class="nav-item">
+                                                                <a class="nav-link active show" data-toggle="pill" href="#stats" role="tab">
+                                                                    {{ 'Сводка сайта'|locale }}
+                                                                </a>
+                                                            </li>
+                                                            <li class="nav-item">
+                                                                <a class="nav-link" data-toggle="pill" href="#notepad" role="tab">
+                                                                    {{ 'Блокнот'|locale }}
+                                                                </a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                                 <div class="card-body">
                                                     <div class="tab-content">
