--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -16,33 +16,35 @@
             <div class="card">
                 <form method="post">
                     <div class="card-header">
-                        <ul class="nav nav-pills nav-secondary nav-pills-no-bd justify-content-center" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link active show" data-toggle="pill" href="#common" role="tab">
-                                    {{ 'Общие'|locale }}
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#user" role="tab">
-                                    {{ 'Пользователи'|locale }}
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#catalog" role="tab">
-                                    {{ 'Каталог'|locale }}
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#plugins" role="tab">
-                                    {{ 'Плагины'|locale }}
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#variables" role="tab">
-                                    {{ 'Переменные'|locale }}
-                                </a>
-                            </li>
-                        </ul>
+                        <div class="d-flex align-items-center">
+                            <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active show" data-toggle="pill" href="#common" role="tab">
+                                        {{ 'Общие'|locale }}
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="pill" href="#user" role="tab">
+                                        {{ 'Пользователи'|locale }}
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="pill" href="#catalog" role="tab">
+                                        {{ 'Каталог'|locale }}
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="pill" href="#plugins" role="tab">
+                                        {{ 'Плагины'|locale }}
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" data-toggle="pill" href="#variables" role="tab">
+                                        {{ 'Переменные'|locale }}
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="card-body">
                         <div class="tab-content">
