--- a/src/Template/cup/donate.twig
+++ b/src/Template/cup/donate.twig
@@ -1,14 +1,14 @@
 <a href="#btn-modal-donate" rel="modal:open" class="nav-link"><i class="fa fa-donate"></i></a>
 
-<div id="btn-modal-donate" class="modal pt-2 pb-0 px-0 text-center">
-    <iframe src="https://getwebspace.github.io/platform-donate/" style="width: 100%; height: 90%; padding: 0; border: 0;"></iframe>
+<div id="btn-modal-donate" class="modal p-2 text-center">
+    <iframe src="https://getwebspace.github.io/platform-donate/" style="width: 100%; height: 100%; padding: 0; border: 0;"></iframe>
 </div>
 
 <style>
     #btn-modal-donate {
         width: 650px !important;
         max-width: 650px !important;
-        height: 550px !important;
-        max-height: 550px !important;
+        height: 555px !important;
+        max-height: 555px !important;
     }
 </style>
